# SAM3_based_Auto_Labeling_Tool

./: .gitignore  README.md  REVIEW_REPORT.md  SAM3_Auto_Label_Tool
web_app/: README.md
web_app/.cwm/docs/plans/260427_01-sam3-mvp-auto-labeling/: CHECKLIST.md  CONTEXT.md  PLAN.md
web_app/backend/: .env.example  main.py  pyproject.toml  state.py
web_app/backend/routers/: correct.py  export.py  guide.py  images.py  label.py  project.py  sam_label.py  train.py
web_app/backend/scripts/: prepare_dataset.py  train.sbatch  train_yolo.py
web_app/backend/services/: export_service.py  sam3_service.py  sam_service.py  yolo_service.py
web_app/docs/: backend_api.md  frontend_guide.md  technical_notes.md
web_app/docs/reports/: qa-report-2026-03-18.md
web_app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web_app/frontend/src/: App.tsx
web_app/frontend/src/api/: client.ts
web_app/frontend/src/components/: ClassSelector.tsx  GuidePanel.tsx  ImageNavigator.tsx  ImageStrip.tsx  LabelCanvas.tsx  ModeToggle.tsx  Sidebar.tsx  Uploader.tsx
